--- a/Web/src/scss/main.scss
+++ b/Web/src/scss/main.scss
@@ -1,45 +1,112 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@700&family=Roboto&display=swap');
+
+@import '@drewbot/sass-flexbox-grid/public/sass-flexbox/scss/main.scss';
+
+$loungeBrandDark: #1a1721;
+$loungeBrandLight: #ffc89c;
 body,
 html {
   height: 100%;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background-color: $loungeBrandDark;
+  color: $loungeBrandLight;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
 }
 
-.fill-parent-height {
-  min-height: 100%;
-}
-
-.fill-parent-width {
-  min-width: 100%;
-  width: 100%;
-}
-
-.v-application {
-  min-height: 100%;
-  overflow-y: auto;
-}
-
-.main-container {
+.app {
   height: 100%;
-  max-height: 100vh;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  flex-grow: 0;
 }
 
-.no-tabs-window-background {
-  .theme--dark.v-tabs-items {
-    background: none !important;
-  }
+.flex-spacer {
+  flex-grow: 1;
+}
 
-  .v-window {
-    flex-grow: 1;
-    > .v-window__container {
-      height: 100%;
-      > .v-window-item {
-        height: 100%;
-      }
-    }
+a {
+  color: darken($loungeBrandLight, 50);
+}
+
+.full-height {
+  height: 100%;
+}
+
+a.btn,
+div.btn {
+  padding: 12px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Dosis', sans-serif;
+  font-weight: bold;
+  font-size: 1.3rem;
+  transition: all 0.2s;
+
+  &.solid {
+    background-color: $loungeBrandLight;
+    color: $loungeBrandDark;
   }
+}
+
+.text-caps {
+  text-transform: uppercase;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.title-font {
+  font-family: 'Dosis', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.title {
+  font-size: 2rem;
+}
+
+.mb-1 {
+  margin-bottom: 12px;
+}
+
+.mb-2 {
+  margin-bottom: 24px;
+}
+
+.mt-1 {
+  margin-top: 12px;
+}
+
+.mt-2 {
+  margin-top: 24px;
+}
+
+.pb-1 {
+  padding-bottom: 12px;
+}
+
+.pb-2 {
+  padding-bottom: 24px;
+}
+
+.app-header .title {
+  font-size: 4rem;
 }
 
 .dev-red {
