--- a/Web/src/scss/main.scss
+++ b/Web/src/scss/main.scss
@@ -6,10 +6,10 @@ $loungeBrandDark: #1a1721;
 $loungeBrandLight: #ffc89c;
 body,
 html {
-  height: 100%;
+  // height: 100%;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  // overflow: hidden;
   background-color: $loungeBrandDark;
   color: $loungeBrandLight;
   font-family: 'Roboto', sans-serif;
@@ -17,7 +17,7 @@ html {
 }
 
 .app {
-  height: 100%;
+  // height: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
