--- a/Web/src/scss/main.scss
+++ b/Web/src/scss/main.scss
@@ -24,7 +24,7 @@ html {
 }
 
 .container {
-  max-width: 800px;
+  max-width: 820px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -105,6 +105,14 @@ h6,
 
 .mr-2 {
   margin-right: 24px;
+}
+
+.ml-1 {
+  margin-left: 12px;
+}
+
+.ml-2 {
+  margin-left: 24px;
 }
 
 .mt-1 {
